@@ -1,5 +1,10 @@
 2007-02-14  Dalibor Topic  <robilad@kaffe.org>
 
+	* shift.c (shift_up, shift_down): Changed len to size_t.
+	Use new variable num_read to count read bytes.
+
+2007-02-14  Dalibor Topic  <robilad@kaffe.org>
+
 	* configure.ac, README, NEWS: Bump version number to 0.96-pre.
 	* Makefile.am (splint): Use libfastjar_convenience_la_SOURCES.
         * configure, Makefile.in: Regenerated.
